--- a/app/assets/stylesheets/smacss/layout.css.scss
+++ b/app/assets/stylesheets/smacss/layout.css.scss
@@ -4,33 +4,92 @@ body {
   flex-direction: column;
   main {
     flex: 1 0 auto;
-    .topic-list {
-      .row {
-        &.valign-wrapper {
-          margin-bottom: 0;
-          h5 {
-            margin-top: 0;
-          }
-          .title {
-            padding-right: 5px;
-          }
-          .vote {
-            font-size: 1.5em;
-            button {
-              padding: 0 1rem;
-              &.btn-flat:focus {
-                background-color: transparent;
-              }
-            }
-          }
-          .chip {
-            white-space: nowrap;
-          }
-          .score {
-            padding: 0 1rem;
-          }
+    input {
+      &#password {
+        &::-webkit-input-placeholder {
+          color: rgba(184, 1, 1, 0.4);
+        }
+        &:-moz-placeholder { /* Firefox 18- */
+          color: rgba(184, 1, 1, 0.4);
+        }
+
+        &::-moz-placeholder {  /* Firefox 19+ */
+          color: rgba(184, 1, 1, 0.4);
+        }
+
+        &:-ms-input-placeholder {
+          color: rgba(184, 1, 1, 0.4);
         }
       }
+    }
+    .topic.collection {
+      .collection-item {
+        padding-right: 10px;
+        padding-left: 10px;
+        ul.topic {
+          width: 100%;
+        }
+        ul.vote {
+          max-width: 31px;
+          button {
+            padding: 0 6px;
+            &.btn-flat:focus {
+              background-color: transparent;
+            }
+          }
+        }
+        h5 {
+          margin-top: 0;
+        }
+        .chip {
+          white-space: nowrap;
+        }
+        p.topic-metadata {
+          margin-bottom: 0;
+          color: rgba(0, 0, 0, 0.6);
+          &#show {
+            padding-bottom: 10px;
+            border-bottom: 1px solid #e0e0e0;
+          }
+        }
+        i.circle {
+          background-color: #999;
+          color: white;
+          padding: 10px;
+          margin: 0 5px;
+        }
+      }
+      // .row {
+      //   &.valign-wrapper {
+      //     margin-bottom: 0;
+      //     h5 {
+      //       margin-top: 0;
+      //     }
+      //     h6.topic-metadata {
+      //       color: rgba(0, 0, 0, 0.6);
+      //       padding-bottom: 5px;
+      //       border-bottom: 1px solid #e0e0e0;
+      //     }
+      //     .title {
+      //       padding-right: 5px;
+      //     }
+      //     .vote {
+      //       font-size: 1.5em;
+      //       button {
+      //         padding: 0 1rem;
+      //         &.btn-flat:focus {
+      //           background-color: transparent;
+      //         }
+      //       }
+      //     }
+      //     .chip {
+      //       white-space: nowrap;
+      //     }
+      //     .score {
+      //       padding: 0 1rem;
+      //     }
+      //   }
+      // }
     }
   }
 }
