--- a/app/views/toast/index.haml
+++ b/app/views/toast/index.haml
@@ -26,7 +26,7 @@
               %button.waves-effect.waves-red.btn-flat{type: 'submit', liked: 'false'}
                 %i.fa.fa-beer.fa-flip-vertical
         %i.material-icons.small.circle.valign insert_comment
-        %ul.valign.topic
+        %ul.valign
           %li
             %h5
               %a.title{href: "/toast-it/topics/#{topic.id}"} #{topic.title}
