--- a/app/views/toast/index.haml
+++ b/app/views/toast/index.haml
@@ -14,17 +14,26 @@
 %main.container
   %ul.topic.collection
     - Topic.all.each do |topic|
+      - liked = topic.liked?(current_user) if current_user
       %li.collection-item.valign-wrapper
         %ul.vote.center-align.valign
           %li
-            %form{action: "/toast-it/topics/toast/#{topic.id}", method: 'post'}
-              %button.waves-effect.waves-green.btn-flat{type: 'submit', liked: 'true'}
-                %i.fa.fa-beer
-          %li.score 0
+            %form{action: "/toast-it/topics/#{topic.id}/toast", method: 'post'}
+              - if liked
+                %button.waves-effect.waves-light.btn.green{type: 'submit', name: 'liked', value: 'true'}
+                  %i.fa.fa-beer
+              - else
+                %button.waves-effect.waves-green.btn-flat{type: 'submit', name: 'liked', value: 'true'}
+                  %i.fa.fa-beer
+          %li.score #{topic.score}
           %li
-            %form{action: "/toast-it/topics/toast/#{topic.id}", method: 'post'}
-              %button.waves-effect.waves-red.btn-flat{type: 'submit', liked: 'false'}
-                %i.fa.fa-beer.fa-flip-vertical
+            %form{action: "/toast-it/topics/#{topic.id}/toast", method: 'post'}
+              - if liked == false
+                %button.waves-effect.waves-light.btn.materialize-red.lighten-2{type: 'submit', name: 'liked', value: 'false'}
+                  %i.fa.fa-beer.fa-flip-vertical
+              - else
+                %button.waves-effect.waves-red.btn-flat{type: 'submit', name: 'liked', value: 'false'}
+                  %i.fa.fa-beer.fa-flip-vertical
         %i.material-icons.small.circle.valign insert_comment
         %ul.valign
           %li
