Update README.md, add link_content column to topics table, require rdiscount and time_difference gems, update rake db:seed

--- a/app/views/homepage/index.haml
+++ b/app/views/homepage/index.haml
@@ -4,5 +4,5 @@
       Welcome, #{@user.name}
     - else
       Welcome
-  %p.flow-text Toast-It is a Sinatra application meant to mimic some of the functionality of Reddit.
+  %p.flow-text Toast-It is a Sinatra CRUD application meant to mimic some of the functionality of Reddit.
   %a.waves-effect.waves-light.btn{href: '/toast-it'} Start Toasting!
