--- a/app/views/layout.haml
+++ b/app/views/layout.haml
@@ -92,7 +92,7 @@
         .row
           .col.l6.s12
             %h5.white-text About
-            %p.grey-text.text-lighten-4 Toast-It is a Sinatra application meant to mimic some of the functionality of Reddit.
+            %p.grey-text.text-lighten-4 Toast-It is a Sinatra CRUD application meant to mimic some of the functionality of Reddit.
           .col.l4.offset-12.s12
             %h5.white-text Tech
             %ul
