--- a/app/views/toast/index.haml
+++ b/app/views/toast/index.haml
@@ -41,6 +41,6 @@
               %a.title{href: "/toast-it/topics/#{topic.id}"} #{topic.title}
           %li
             %p.topic-metadata
-              %a.chip{href: "/toast-it/topics/#{topic.id}"} #{topic.comments.count} comments
+              %a.chip{href: "/toast-it/topics/#{topic.id}#comments"} #{topic.comments.count} comments
               Submitted 30 minutes ago by
               %a{href: '#'} #{topic.user.name}
