--- a/app/views/toast/index.haml
+++ b/app/views/toast/index.haml
@@ -4,11 +4,44 @@
     %i.large.mdi-navigation-menu
   %ul
     %li<
-      %a.btn-floating.blue{href: '/toast-it/topics/new#link'}<
+      %a.btn-floating.blue.modal-trigger{href: '#new_link'}<
         %i.material-icons link
     %li<
-      %a.btn-floating.red{href: '/toast-it/topics/new'}<
+      %a.btn-floating.red.modal-trigger{href: '#new'}<
         %i.large.material-icons mode_edit
+
+.modal#new
+  %form{action: '/toast-it/topics', method: 'post'}
+    .modal-content
+      .row
+        %h4.col.s12 Create a new text topic
+      .row
+        .input-field.col.s12
+          %input.validate#title{type: 'text', name: 'title', required: true}
+          %label{for: 'title'} Topic Title
+        .input-field.col.s12
+          %textarea.materialize-textarea#content{name: 'content', required: true}
+          %label{for: 'content'} Topic Contents
+    .modal-footer
+      %button.btn.waves-effect.waves-light{type: 'submit'}
+        Create Text Topic
+        %i.material-icons.right send
+.modal#new_link
+  %form{action: '/toast-it/topics', method: 'post'}
+    .modal-content
+      .row
+        %h4.col.s12 Create a new link topic
+      .row
+        .input-field.col.s12
+          %input.validate#title{type: 'text', name: 'title', required: true}
+          %label{for: 'title'} Topic Title
+        .input-field.col.s12
+          %input.validate#content{type: 'url', name: 'content', required: true}
+          %label{for: 'content'} Topic URL
+    .modal-footer
+      %button.btn.waves-effect.waves-light{type: 'submit', name: 'link_topic', value: 'true'}
+        Create Link Topic
+        %i.material-icons.right send
 
 -# Topic List
 %main.container
